--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h2>Read the hints bellow and try to guess their corresponding names and locations on the map. To see the solution, simply click on the grey buttons</h2>
 		<div class = "landmark anasHouse">
 			   <button class = "Pic1"></button>
-			   <div class = "landmarkTitle">Ana's Apartment (photo of nearby area by amadalvarez)</div>
+			   <div class = "landmarkTitle">Ana's Apartment (photo of nearby area by Amad Alvarez)</div>
 			   <div class = "landmarkInfo">Located in a vibrant neighborhood | Near "Las Arenas" plaza</div>
         </div>
 		       <div class = "landmark GaudiPark">
