--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
 		<h2>Read the hints bellow and try to guess their corresponding names and locations on the map. To see the solution, simply click on the grey buttons</h2>
 		<div class = "landmark anasHouse">
 			   <button class = "Pic1"></button>
-			   <div class = "landmarkTitle">Ana's Apartment (photo of nearby area by Amad Alvarez)</div>
-			   <div class = "landmarkInfo">Located in a vibrant neighborhood | Near "Las Arenas" plaza</div>
+			   <div class = "landmarkTitle">Ana's Apartment</div>
+			   <div class = "landmarkInfo">Located in a vibrant neighborhood | Near "Las Arenas" plaza (photo of nearby area by Amad Alvarez)</div>
         </div>
 		       <div class = "landmark GaudiPark">
 		       <button class = "Pic2"></button>
-			   <div class = "landmarkTitle">Gaudi Park (photo by Bernard Gagnon)</div>
-			   <div class = "landmarkInfo">Unique park with colorful tiles and sculptures | North side, with windy trails</div>
+			   <div class = "landmarkTitle">Gaudi Park</div>
+			   <div class = "landmarkInfo">Unique park with colorful tiles and sculptures | North side, with windy trails (photo by Bernard Gagnon)</div>
 		</div>	
 		<div class = "landmark MontjuicPark">
 			   <button class = "Pic3"></button>
 		       <div class = "landmarkTitle">Montjuic Park</div>
-			   <div class = "landmarkInfo">Amazing view of the city | park on a hill near the olympic stadium</div>
+			   <div class = "landmarkInfo">Amazing view of the city | park on a hill near the olympic stadium (photo by facilisimo.com)</div>
         </div>
         <div class = "landmark Playa">
         	   <button class = "Pic4"></button>
 			   <div class = "landmarkTitle">Barceloneta Beach</div>
-			   <div class = "landmarkInfo">Great outdoor area for summer leisure and sun tanning | North of the port</div>
+			   <div class = "landmarkInfo">Great outdoor area for summer leisure and sun tanning | North of the port (photo by 4.bp.blogspot.com)</div>
 		</div>
 		<div class = "landmark Gaudi">
 			   <button class = "Pic5"></button>
 			   <div class = "landmarkTitle">La Sagrada Familia Cathedral</div>
-			   <div class = "landmarkInfo">Famous cathedral with a very colorful and excentric architecture | Center-North part of the city</div>
+			   <div class = "landmarkInfo">Famous cathedral with a very colorful and excentric architecture | Center-North part of the city (photo by apartmentsbebarcelona.com)</div>
 		</div>
 		<div class = "landmark Cathedral">
 			   <button class = "Pic6"></button>
