--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 		<div class = "landmark Gaudi">
 			   <button class = "Pic5"></button>
 			   <div class = "landmarkTitle">La Sagrada Familia Cathedral</div>
-			   <div class = "landmarkInfo">Famous cathedral with a very colorful and excentric architecture | Center-North part of the city (photo by apartmentsbebarcelona.com)</div>
+			   <div class = "landmarkInfo">Famous cathedral with a very colorful and excentric architecture | Center-North part of the city</div>
 		</div>
 		<div class = "landmark Cathedral">
 			   <button class = "Pic6"></button>
 			   <div class = "landmarkTitle">Barcelona Cathedral</div>
-			   <div class = "landmarkInfo">Old and majestic cathedral | In the historic neighborhood</div>
+			   <div class = "landmarkInfo">Old and majestic cathedral | In the historic neighborhood (photo by apartmentsbebarcelona.com)</div>
 		</div>
 
     <button class = "reset">reset</button>
